--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/crdr
 spring.datasource.username=dev
 spring.datasource.password=Cr3at0r
 spring.jpa.properties.hibernate.format_sql = true
-logging.level.root=warn
+#logging.level.root=warn
+spring.jpa.show-sql=true
