--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.datasource.password=Cr3at0r
 spring.jpa.properties.hibernate.format_sql = true
 #logging.level.root=warn
 spring.jpa.show-sql=true
+spring.security.user.name=nandha
+spring.security.user.password={bcrypt}$2a$10$E.nXRSPx6vadp9wOrQwMLOOettOskYpORmoTA6e2pmwzqUdt2F6Fu
+spring.security.user.roles=developer
+logging.level.org.springframework.boot.autoconfigure.security=info
