--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
 	<description>Web Reporting Tool for CrDr</description>
 	<properties>
 		<java.version>1.8</java.version>
+		<thymeleaf.version>3.0.12.RELEASE</thymeleaf.version>
+    	<thymeleaf-layout-dialect.version>2.1.1</thymeleaf-layout-dialect.version>
 	</properties>
 	<dependencies>
 		<dependency>
