--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.security.user.name=nandha
 spring.security.user.password={bcrypt}$2a$10$E.nXRSPx6vadp9wOrQwMLOOettOskYpORmoTA6e2pmwzqUdt2F6Fu
 spring.security.user.roles=developer
 logging.level.org.springframework.boot.autoconfigure.security=info
+server.error.whitelabel.enabled=false
