implementing ledger view

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.security.user.password={bcrypt}$2a$10$E.nXRSPx6vadp9wOrQwMLOOettOskYpORmo
 spring.security.user.roles=developer
 logging.level.org.springframework.boot.autoconfigure.security=info
 server.error.whitelabel.enabled=false
+logging.file.name=Crdr.log
