--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.security.user.roles=developer
 logging.level.org.springframework.boot.autoconfigure.security=info
 server.error.whitelabel.enabled=false
 logging.file.name=Crdr.log
+logging.pattern.dateformat=yyyy-MM-dd HH:mm:ss.SSS
