--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 		<java.version>1.8</java.version>
 		<thymeleaf.version>3.0.12.RELEASE</thymeleaf.version>
 		<thymeleaf-layout-dialect.version>2.1.1</thymeleaf-layout-dialect.version>
-	    <blaze-persistence.version>1.5.1</blaze-persistence.version>
+		<blaze-persistence.version>1.5.1</blaze-persistence.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -34,7 +34,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>com.ibm.icu</groupId>
+			<artifactId>icu4j</artifactId>
+			<version>65.1</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
