--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
-#spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/crdr
 spring.datasource.username=dev
 spring.datasource.password=Cr3at0r
 spring.jpa.properties.hibernate.format_sql = true
-#logging.level.root=warn
 spring.jpa.show-sql=true
-spring.security.user.name=nandha
-spring.security.user.password={bcrypt}$2a$10$E.nXRSPx6vadp9wOrQwMLOOettOskYpORmoTA6e2pmwzqUdt2F6Fu
-spring.security.user.roles=developer
 logging.level.org.springframework.boot.autoconfigure.security=info
 server.error.whitelabel.enabled=false
-logging.file.name=Crdr.log
-logging.pattern.dateformat=yyyy-MM-dd HH:mm:ss.SSS
+#logging.file.name=Crdr.log
+#logging.pattern.dateformat=yyyy-MM-dd HH:mm:ss.SSS
+
+management.endpoints.web.exposure.include=*
+ 
+# To expose only selected endpoints
+#management.endpoints.jmx.exposure.include=health,info,env,beans
