--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/crdr
 spring.datasource.username=dev
 spring.datasource.password=Cr3at0r
 spring.jpa.properties.hibernate.format_sql = true
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 logging.level.org.springframework.boot.autoconfigure.security=info
 server.error.whitelabel.enabled=false
 #logging.file.name=Crdr.log
