--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<groupId>in.trident.crdr</groupId>
 	<artifactId>CrDrReport</artifactId>
 	<version>0.0.5-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>CrDrReport</name>
 	<description>Web Reporting Tool for CrDr</description>
 	<properties>
