updated logger file name to enable logging when using jar file running

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.show-sql=true
 logging.level.org.springframework.boot.autoconfigure.security=info
 server.error.whitelabel.enabled=false
-#logging.file.name=Crdr.log
+logging.file.name==Crdr.log
 #logging.pattern.dateformat=yyyy-MM-dd HH:mm:ss.SSS
 
 management.endpoints.web.exposure.include=*
