logging level changed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/crdr
 spring.datasource.username=dev
 spring.datasource.password=Cr3at0r
 spring.jpa.properties.hibernate.format_sql = true
-spring.jpa.show-sql=true
-logging.level.org.springframework.boot.autoconfigure.security=info
+spring.jpa.show-sql=false
+logging.level.org.springframework.boot.autoconfigure.security=trace
 server.error.whitelabel.enabled=false
 logging.file.name==Crdr.log
 #logging.pattern.dateformat=yyyy-MM-dd HH:mm:ss.SSS
