--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/crdr
+spring.datasource.url=jdbc:mysql://localhost:3306/crdr2
 spring.datasource.username=dev
 spring.datasource.password=Cr3at0r
 spring.jpa.properties.hibernate.format_sql = true
