file upload size limit added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,9 @@ server.error.whitelabel.enabled=false
 logging.file.name==Crdr.log
 #logging.pattern.dateformat=yyyy-MM-dd HH:mm:ss.SSS
 
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
+
 management.endpoints.web.exposure.include=*
  
 # To expose only selected endpoints
