--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,12 @@
 			<artifactId>commons-csv</artifactId>
 			<version>1.9.0</version>
 		</dependency>
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>6.18.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
