path for app line added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
 
 management.endpoints.web.exposure.include=*
+
+# server.servlet.context-path=/crdr
  
 # To expose only selected endpoints
 #management.endpoints.jmx.exposure.include=health,info,env,beans
