--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.jpa.show-sql=true
 logging.level.org.springframework.boot.autoconfigure.security=trace
 server.error.whitelabel.enabled=false
 logging.file.name==Crdr.log
+logging.logback.rollingpolicy.max-file-size = 1024KB
+logging.logback.rollingpolicy.file-name-pattern = CrDr-%d{yyyy-MM-dd}-%i.log
 #logging.pattern.dateformat=yyyy-MM-dd HH:mm:ss.SSS
 
 spring.servlet.multipart.max-file-size=2MB
@@ -22,3 +24,4 @@ management.endpoints.web.exposure.include=*
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
+#spring.output.ansi.enabled = always
