logging related changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.show-sql= false
 logging.level.org.springframework.boot.autoconfigure.security=trace
 server.error.whitelabel.enabled=false
-logging.file.name==Crdr.log
-logging.logback.rollingpolicy.max-file-size = 1024KB
+logging.file.name=Crdr.log
+logging.logback.rollingpolicy.max-file-size = 10240KB
 logging.logback.rollingpolicy.file-name-pattern = CrDr-%d{yyyy-MM-dd}-%i.log
 #logging.pattern.dateformat=yyyy-MM-dd HH:mm:ss.SSS
 
