--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<groupId>in.trident.crdr</groupId>
 	<artifactId>CrDrReport</artifactId>
-	<version>0.0.9b-SNAPSHOT</version>
+	<version>0.0.9c-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>CrDrReport</name>
 	<description>Web Reporting Tool for CrDr</description>
