--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,17 @@ spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.Im
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 #spring.output.ansi.enabled = always
+
+#access logs
+server.tomcat.accesslog.enabled=true
+server.tomcat.accesslog.suffix=.log
+server.tomcat.accesslog.prefix=crdr_access_log
+server.tomcat.accesslog.file-date-format=.dd-MM-yyyy
+server.tomcat.basedir=tomcat
+server.tomcat.accesslog.directory=logs
+#Internal Server logs
+logging.level.org.apache.tomcat=DEBUG
+logging.level.org.apache.catalina=DEBUG
+
+# exception loading sessions from persistent storage error resolve
+server.servlet.session.persistent=false
