--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,12 @@
 			<artifactId>jasperreports</artifactId>
 			<version>6.18.1</version>
 		</dependency>
+		<!-- UCANACCESS -->
+		<dependency>
+			<groupId>net.sf.ucanaccess</groupId>
+			<artifactId>ucanaccess</artifactId>
+			<version>5.0.1</version>
+		</dependency>
 
 	</dependencies>
 
