file storage feature completed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,12 @@ logging.logback.rollingpolicy.max-file-size = 10240KB
 logging.logback.rollingpolicy.file-name-pattern = CrDr-%d{yyyy-MM-dd}-%i.log
 #logging.pattern.dateformat=yyyy-MM-dd HH:mm:ss.SSS
 
+#Hibernate 
+spring.jpa.properties.hibernate.generate_statistics=true
+#spring.jpa.properties.hibernate.jdbc.batch_size=50
+#spring.jpa.properties.hibernate.order_inserts=true
+#spring.jpa.properties.hibernate.order_updates=true
+
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
 
