set active profile from pom.xml

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,8 @@ logging.logback.rollingpolicy.max-file-size = 10240KB
 logging.logback.rollingpolicy.file-name-pattern = CrDr-%d{yyyy-MM-dd}-%i.log
 #logging.pattern.dateformat=yyyy-MM-dd HH:mm:ss.SSS
 
+spring.profiles.active=@activatedProperties@
+
 #Hibernate 
 spring.jpa.properties.hibernate.generate_statistics=false
 #spring.jpa.properties.hibernate.jdbc.batch_size=50
