--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-spring.jpa.hibernate.ddl-auto=none
+#Datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/crdr2
 spring.datasource.username=dev
 spring.datasource.password=Cr3at0r
 spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.show-sql= false
+
+#Logging
 logging.level.org.springframework.boot.autoconfigure.security=trace
 server.error.whitelabel.enabled=false
 logging.file.name=Crdr.log
@@ -15,6 +17,7 @@ logging.logback.rollingpolicy.file-name-pattern = CrDr-%d{yyyy-MM-dd}-%i.log
 spring.profiles.active=@activatedProperties@
 
 #Hibernate 
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.generate_statistics=false
 #spring.jpa.properties.hibernate.jdbc.batch_size=50
 #spring.jpa.properties.hibernate.order_inserts=true
