--- a/src/main/resources/application-deploy.properties
+++ b/src/main/resources/application-deploy.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/crdrtest
 spring.datasource.username=dev
 spring.datasource.password=Cr3at0r
@@ -11,6 +11,10 @@ logging.file.path=./logs/
 logging.logback.rollingpolicy.max-file-size = 10240KB
 logging.logback.rollingpolicy.file-name-pattern = CrDr-%d{yyyy-MM-dd}-%i.log
 #logging.pattern.dateformat=yyyy-MM-dd HH:mm:ss.SSS
+
+# Enable data.sql
+spring.datasource.initialization-mode=always
+
 
 #Hibernate 
 spring.jpa.properties.hibernate.generate_statistics=false
