Navbar and yearselect
- navbar bootstrap updated
- new rest api to get years added
- new js file added with jquery ajax

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.show-sql= false
 logging.level.org.springframework.boot.autoconfigure.security=trace
 server.error.whitelabel.enabled=false
 logging.file.name=Crdr.log
-logging.file.path=./logs/
+logging.file.path=/logs
 logging.logback.rollingpolicy.max-file-size = 10240KB
 logging.logback.rollingpolicy.file-name-pattern = CrDr-%d{yyyy-MM-dd}-%i.log
 #logging.pattern.dateformat=yyyy-MM-dd HH:mm:ss.SSS
